<resources>
    <string name="app_name">Online Test</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_text">Login</string>
    <string name="not_registerd_yet">Not Registered yet!</string>
    <string name="register_button_text">Register here</string>
    <string name="student_name_text">Student Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_btn_text">Register</string>
    <string name="logout_text">Logout</string>
    <string name="admin_text">Admin</string>
    <string name="student_text">Student</string>
    <string name="role_text">Role:</string>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Student fragment</string>
    <string name="no_test_msg">No Test is Added!</string>
    <string name="create_new_test_text">Create</string>
    <string name="detail_title">Details</string>
    <string name="question_title">Questions</string>
    <string name="participant_title">Participants</string>
    <string name="no_data_found">No Data Found</string>
    <string name="demo_q_text">1. What is the operating System?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="create">Create</string>
    <string name="select_correct_option">Select Correct Option</string>
    <string name="add_question">Add Question</string>
    <string name="options">Options</string>
    <string name="start_now">Start Now</string>
    <string name="congratulation">Congratulation</string>
    <string name="complete_test_text">You have completed the Quize.</string>
    <string name="quiz_title">Quiz Title:</string>
    <string name="add_explanation">Add Explanation</string>
    <string name="info">Info</string>
    <string name="sample_test_message">You need to pass the Sample Test to go through before registration.
    Don't worry it's just a sample test to understand the pattern of the quiz.</string>
    <string name="sample_test">Sample Test</string>
    <string name="publish">Publish</string>
</resources>
