<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@color/cardview_light_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sQuestionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_q_text"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/borderTv"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/questionTv"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"/>

        <RadioGroup
            android:id="@+id/sQuestionRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/borderTv"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp">


            <RadioButton
                android:id="@+id/option1Rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:textColor="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/option2Rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:textColor="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/option3Rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:textColor="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/option4Rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_4"
                android:textColor="@color/colorPrimary"/>

        </RadioGroup>

    </RelativeLayout>


</android.support.v7.widget.CardView>