<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.test.onlinetest.AddQuestionActivity">

    <include
        android:id="@+id/addQToolBar"
        layout="@layout/app_bar_layout" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addQToolBar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="30dp">

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/questionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/question_title" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/question_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout3"
                app:layout_constraintVertical_bias="0.459" />


            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="307dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/border"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/option1Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="21dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/option_1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/option2Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/option1Et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/option_2" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/option3Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/option2Et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/option_3" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/option4Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/option3Et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/option_4" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/barTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/options"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout4"
                app:layout_constraintVertical_bias="0.473" />


            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">


                <RadioGroup
                    android:id="@+id/addQuestionRg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/option1Rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/option_1" />

                    <RadioButton
                        android:id="@+id/option2Rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_2" />

                    <RadioButton
                        android:id="@+id/option3Rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_3" />

                    <RadioButton
                        android:id="@+id/option4Rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_4" />

                </RadioGroup>


            </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                android:text="@string/select_correct_option"
                android:textColor="@color/colorPrimary"
                android:background="@color/white"
                android:padding="5dp"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout6"
                app:layout_constraintVertical_bias="0.472" />

            <Button
                android:id="@+id/addQuestionBT"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginBottom="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="@string/add_question"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:background="@drawable/border"
                app:layout_constraintBottom_toTopOf="@+id/addQuestionBT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout6">


                <EditText
                    android:id="@+id/explanationEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/add_explanation"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.081"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout8"
                app:layout_constraintVertical_bias="0.707" />


        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</RelativeLayout>
